[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-economy_pilot_lite"
version = "0.0.6"
description = "Economy Pilot Lite api for Endstone servers!"
readme = "README.md"
dependencies = [
  "PyMySQL"
]

[project.entry-points."endstone"]
economy_pilot_lite = "endstone_economy_pilot_lite:Main"



