[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-economy_pilot"
version = "0.0.7"
description = "The Economy Pilot api for Endstone servers!"
readme = "README.md"
dependencies = [
  "PyMySQL"
]

[project.entry-points."endstone"]
economy_pilot = "endstone_economy_pilot:Main"

[project.urls]
Homepage = "https://github.com/legitbox/Economy-Pilot"

